domain/src/main/java/com/example/clean_architecture/domain/core/error/CoroutineError.kt
package com.example.clean_architecture.domain.core.error

interface CoroutineError